--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
-theme: jekyll-theme-slate
+theme: jekyll-theme-midnight
 markdown: GFM
 baseUrl: https://slamerz.github.io/Dragon-Ball-Super-Rulings/
